--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio d’Ermilsonn Derys</title>
+  <style>
+    body {
+      font-family: "Inter", sans-serif;
+      background: #f5f6fa;
+      color: #2f3640;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background: #273c75;
+      color: white;
+      padding: 2rem 1rem;
+    }
+    section {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    h1, h2 {
+      margin-bottom: 1rem;
+    }
+    a {
+      color: #0097e6;
+      text-decoration: none;
+    }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      background: #dcdde1;
+      color: #353b48;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Ermilsonn Derys</h1>
+    <p>Étudiant M2 Data Science — Université Paris Cité</p>
+  </header>
+
+  <section>
+    <h2>👨‍💻 Projets</h2>
+    <ul style="text-align:left; line-height:1.8;">
+      <li><strong>Projet RAG :</strong> Chatbot capable de lire mon CV et répondre aux questions.</li>
+      <li><strong>Détection de fraude bancaire :</strong> Modèles Python supervisés pour classer les transactions suspectes.</li>
+      <li><strong>Analyse des flux routiers à New York :</strong> Visualisation et prédiction sous R.</li>
+    </ul>
+
+    <h2>📂 Liens utiles</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/ermilsonn-derys/" target="_blank">LinkedIn</a> |
+      <a href="CV-DERYS-E-Stage.pdf" target="_blank">CV PDF</a> |
+      <a href="https://github.com/<ton-user>" target="_blank">GitHub</a>
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Ermilsonn Derys — Portfolio hébergé sur GitHub Pages
+  </footer>
+</body>
+</html>
